# pattern-rewriting-language

./: .gitignore  .gitmodules  CMakeLists.txt  Cartridge.cpp  Cartridge.hpp  Match.cpp  Match.hpp  Orientation.hpp  ParserVisitor.cpp  ParserVisitor.hpp  Pattern.cpp  Pattern.hpp  README.md  Rule.cpp  Rule.hpp  Symbol.cpp  Symbol.hpp  main.cpp  meson.build  program1.cpp  program2.cpp  program3.cpp  program5.cpp  program6.cpp
examples/: dungeon.prl  house.prl  islands.prl  program1.cpp  program3.cpp  program4.cpp  rooms.prl
grammar/: PRL.g4
grammar/.antlr/: PRL.interp  PRLLexer.interp
grammar/antlr4-runtime/: PRL.tokens  PRLBaseVisitor.cpp  PRLBaseVisitor.h  PRLLexer.cpp  PRLLexer.h  PRLParser.cpp  PRLParser.h  PRLVisitor.cpp  PRLVisitor.h  meson.build
